--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -1,6 +1,5 @@
-<div class="  px-6 sm:px-8  pt-16 mb-5 lg:px-24 linear-gradient h-screen">
-
-    <div class="flex justify-between mb-20 container px-20">
+<div class="  px-6 sm:px-8 pt-16 mb-5 lg:px-20 linear-gradient ">
+    <div class="flex justify-between mb-20 container ">
         <a routerLink="/home"><img src="../../../../../assets/images/logo1.png"
                 class="animate__animated animate__fadeInUp" alt=""></a>
         <button
@@ -43,7 +42,7 @@
                         [ngClass]=" nom?.invalid && nom?.touched ? 'border-red-500' : 'border-blue-100'"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900   border-warm-gray-200 rounded-xl placeholder-200">
                     <div *ngIf="nom?.touched && nom?.invalid" class="text-left mt-1">
-                        <div class="text-red-600" *ngIf="nom?.errors?.required">Le nom est obligatoire.</div>
+                        <div class="text-red-600" *ngIf="nom?.errors?.required">Champ obligatoire</div>
                     </div>
                 </div>
             </div>
@@ -54,19 +53,18 @@
                         [ngClass]=" prenom?.invalid && prenom?.touched ? 'border-red-500' : 'border-blue-100'"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                     <div *ngIf="prenom?.touched && prenom?.invalid" class="text-left mt-1">
-                        <div class="text-red-600" *ngIf="prenom?.errors?.required">Le prénom est obligatoire.</div>
+                        <div class="text-red-600" *ngIf="prenom?.errors?.required">Champ obligatoire</div>
                     </div>
                 </div>
             </div>
             <div>
                 <label for="telephone" class="block text-sm font-medium text-gray-700">Votre téléphone</label>
                 <div class="mt-1">
-                    <input type="text" name="telephone" id="telephone" placeholder="téléphone +41"
-                        formControlName="telephone"
+                    <input type="text" name="telephone" id="telephone" placeholder="+41" formControlName="telephone"
                         [ngClass]=" telephone?.invalid && telephone?.touched ? 'border-red-500' : 'border-blue-100'"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300  focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                     <div *ngIf="telephone?.touched && telephone?.invalid" class="text-left mt-1">
-                        <div class="text-red-600" *ngIf="telephone?.errors?.required">Le télépgone est obligatoire.
+                        <div class="text-red-600" *ngIf="telephone?.errors?.required">Champ obligatoire
                         </div>
                     </div>
                 </div>
@@ -78,9 +76,9 @@
                         [ngClass]=" email?.invalid && email?.touched ? 'border-red-500' : 'border-blue-100'"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300  focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                     <div *ngIf="email?.touched && email?.invalid" class="text-left mt-1">
-                        <span class="text-red-600" *ngIf="email?.errors?.required">L'email est obligatoire.
+                        <span class="text-red-600" *ngIf="email?.errors?.required">Champ obligatoire
                         </span>
-                        <span class="text-red-600" *ngIf="email?.errors?.email">L'email est invalid.
+                        <span class="text-red-600" *ngIf="email?.errors?.email">Adresse email invalide
                         </span>
                     </div>
                 </div>
@@ -94,11 +92,11 @@
                     Envoyer
                 </button>
 
-                <swal #addSuccess title="Succès" text="Vos informations sont enregistrées avec succès" icon="success"
-                    [focusCancel]="true" (confirm)="resetForm()">
-                </swal>
-                <swal #addFailure title="Erreur" [text]=errorMessage icon="error" [focusCancel]="true"
+                <swal #addSuccess title="Succès" text="Merci pour votre inscription." icon="success" [focusCancel]="true"
                     (confirm)="resetForm()">
+                </swal>
+                <swal #addFailure title="Erreur" text="Une erreur s'est produite. Veuillez vérifier les champs."
+                    icon="error" [focusCancel]="true" (confirm)="resetForm()">
                 </swal>
             </div>
 
