--- a/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
@@ -62,7 +62,7 @@
             </label>
             <label for="upload0">
               <span [ngClass]="currentInput=='+  Ajouter' ? 'text-blue-2' : 'text-gray-700'" > {{currentInput}}</span>
-              <input type="file" id="payslip1"  
+              <input type="file" id="upload0"  
               (change)="onFileSelected($event)" style="display:none">
         </label>          </div>
           <div class="flex items-center">
@@ -71,7 +71,7 @@
             </label>
             <label for="upload1">
               <span class="text-blue-2"> +  Ajouter</span>
-              <input type="file" id="payslip2" style="display:none">
+              <input type="file" id="upload1" style="display:none">
         </label>         
           </div>
           <div class="flex items-center">
