--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,5 +1,6 @@
-<div class="px-6 sm:px-8  pt-16 mb-5 lg:px-20 linear-gradient ">
-    <div class="nav flex flex-row justify-between ">
+<div class="fixed top-0 left-0 right-0 pt-4  px-2 px-2 sm:px-10 sm:px-10 md:px-24 md:px-24 z-50 transition	"
+    [ngClass]="{'bg-white shadow' : transparent}">
+    <div class="flex justify-between mb-5 ">
         <a routerLink="/home"><img src="../../../../../assets/images/logo1.png"
                 class="animate__animated animate__fadeInUp" alt="">
         </a>
@@ -10,10 +11,9 @@
             </button>
 
         </div>
-
-
-
     </div>
+</div>
+<div class="px-6 sm:px-8 pt-20 md:pt-28 mb-5 lg:px-20 linear-gradient ">
     <div class="grid md:grid-cols-2 mt-10 container mx-auto lg:px-10">
         <div class="flex flex-col my-auto items-start">
             <div class="flex flex-row">
@@ -40,16 +40,11 @@
                 class="hidden md:block mx-auto md:mx-0" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
-                <div class="flex flex-row">
-                    <h1 class=" popping font-extrabold leading-tight text-4xl mb-4 sm:text-5xl">tenders <span
-                            class="text-purple">en
-                            quelques <br>
-                            mots...</span>
-                    </h1>
-                    <!-- <img src="../../../../../assets/images/bulle1.png" class="-translate-y-20 -translate-x-20"
-                        alt=""> -->
-
-                </div>
+                <h1 class=" popping font-extrabold leading-tight text-4xl mb-4 sm:text-5xl">tenders <span
+                        class="text-purple">en
+                        quelques <br>
+                        mots...</span>
+                </h1>
 
                 <p class="text-lg text-gray-500">Tenders est le réseau immobilier de suisse pensé pour ses acteurs.
                     Aucun intermédiaire ! Notre
@@ -214,14 +209,12 @@
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png"
                 class="mx-auto md:mx-0 shadow-lg" class="order-last md:order-first" alt="">
 
-            <div class="flex flex-col pt-10 items-start ">
-                <div class="flex flex-row">
-                    <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Vous souhaitez trouver
-                        <span class="text--blue">le candidat idéal ?</span>
-                    </h2>
-                    <!--  <img src="../../../../../assets/images/bulle8.png"
-                        class="hidden md:block -translate-y-20 -translate-x-16 height-100" alt=""> -->
-                </div>
+            <div class="flex flex-col pt-5 items-start ">
+                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Vous êtes remetteur ou propriétaire
+                </h1>
+                <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Vous souhaitez trouver
+                    <span class="text--blue">le candidat idéal ?</span>
+                </h2>
 
                 <p class="mt-5 text-lg text-gray-500">
                     Les algorithmes développés pour notre plateforme permettent aux remetteurs de bail et aux
@@ -247,8 +240,8 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2 grid-flow-scolgap-14 gap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Vous êtes remetteur ou propriétaire
-                </h1>
+                <!--   <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Vous êtes remetteur ou propriétaire
+                </h1> -->
                 <div class="flex flex-row ">
                     <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publiez <span
                             class="light-yellow">vos biens<br>immobiliers</span></h2>
@@ -298,7 +291,8 @@
         <img src="../../../../../assets/images/newsLetter.png" class="justify-self-center -translate-y-14	"
             height="100px">
         <div class="flex flex-col my-auto items-start px-5 md:px-0 ml-3 ">
-            <h1 class="popping font-extrabold text-2xl ">Nous ferons notre entrée sur <br> le marché Genevois le 30
+            <h1 class="popping font-extrabold text-2xl ">Nous ferons notre entrée sur <br class="hidden md:block"> le
+                marché Genevois le 30
                 septembre
                 2021
             </h1>
