--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer class="bg-white px-6 sm:px-8 lg:px-24  " aria-labelledby="footer-heading">
+<footer class="bg-white px-6 sm:px-8 lg:px-24" aria-labelledby="footer-heading">
     <h2 id="footer-heading" class="sr-only">Footer</h2>
-    <div class="container   mt-20  py-12  lg:py-16">
+    <div class="mt-20  py-12  lg:py-16">
         <!-- <div class="xl:grid xl:grid-cols-3 xl:gap-8">
             <div class="space-y-8 xl:col-span-1">
                 <img src="../../../../../assets/images/logo.png" alt="Company name">
