get infos from pages to ngrx state

--- a/src/app/modules/register/bailleur-register/pages/steps/about/about.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/about/about.component.html
@@ -41,12 +41,12 @@
 
       <div class="col-span-6 sm:col-span-3">
         <label for="locality" class="block text-sm font-medium text-gray-700">NPA/Localité</label>
-        <input type="text" name="locality" id="locality" autocomplete="locality" formControlName="locality"
+        <input type="text" name="locality" id="locality" autocomplete="locality" placeholder="NPA/Localité" formControlName="locality"
           class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
       </div>
       <div class="col-span-6 sm:col-span-3">
         <label for="address" class="block text-sm font-medium text-gray-700">Adresse actuelle</label>
-        <input type="text" name="address" id="address" autocomplete="address" formControlName="address"
+        <input type="text" name="address" id="address" autocomplete="address" placeholder="Adresse" formControlName="address"
           class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
       </div>
       <div class="col-span-6 sm:col-span-3">
