--- a/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/property/property.component.html
@@ -1,25 +1,25 @@
 
   <div class="mt-5 md:mt-0 md:col-span-2 bg-white ">
     <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Propriété</div>
-    <form action="#" method="POST">
+    <form [formGroup]="propertyForm">
       <div class="grid grid-cols-6 gap-6">
         <div class="col-span-6 sm:col-span-6">
-            <label for="last-name" class="block text-sm font-medium text-gray-700">Bailleur actuel</label>
-            <input type="text" placeholder="Votre bailleur actuel" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <label for="currentDonor" class="block text-sm font-medium text-gray-700">Bailleur actuel</label>
+            <input type="text" placeholder="Votre bailleur actuel" name="currentDonor" formControlName="currentDonor" id="currentDonor" autocomplete="currentDonor" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
           <div class="col-span-6 sm:col-span-3">
-            <label for="last-name" class="block text-sm font-medium text-gray-700">Nombre de pièces</label>
-            <input type="number" placeholder="14" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <label for="numberOfPieces" class="block text-sm font-medium text-gray-700">Nombre de pièces</label>
+            <input type="number" placeholder="14" name="numberOfPieces" formControlName="numberOfPieces" id="numberOfPieces" autocomplete="numberOfPieces" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
            <div class="col-span-6 sm:col-span-3">
-            <label for="last-name" class="block text-sm font-medium text-gray-700">Loyer actuel(charges comprises)</label>
-            <input type="number" placeholder="0" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <label for="currentRent" class="block text-sm font-medium text-gray-700">Loyer actuel(charges comprises)</label>
+            <input type="number" placeholder="0" name="currentRent" formControlName="currentRent" id="currentRent" autocomplete="currentRent" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
         <div class="col-span-6 sm:col-span-6">
-            <label for="last-name" class="block text-sm font-medium text-gray-700">Le bail est-il à votre nom?</label>
+            <label for="leaseInYourName" class="block text-sm font-medium text-gray-700">Le bail est-il à votre nom?</label>
             <div class="grid grid-rows-6 grid-flow-col gap-2">
               <div class="row-span-6 sm:row-span-6 ">
-                <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                <select id="leaseInYourName" name="leaseInYourName" formControlName="leaseInYourName" autocomplete="leaseInYourName" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                   <option>Oui</option>
                   <option>Non</option>
                 </select>
@@ -29,61 +29,61 @@
             </div>
             </div>
             <div class="col-span-6 sm:col-span-6">
-                <label for="last-name" class="block text-sm font-medium text-gray-700">Raison du changement</label>
+                <label for="ReasonForChange" class="block text-sm font-medium text-gray-700">Raison du changement</label>
                   <div class="row-span-6 sm:row-span-6 ">
-                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    <select id="ReasonForChange" name="ReasonForChange" formControlName="ReasonForChange" autocomplete="ReasonForChange" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                       <option>La raison de votre changement</option>
                       <option>Non</option>
                     </select>
                   </div>    
             </div>
             <div class="col-span-6 sm:col-span-6">
-                <label for="last-name" class="block text-sm font-medium text-gray-700">Comment avez-vous trouvé ce objet?</label>
+                <label for="howDidYouFindThisObject" class="block text-sm font-medium text-gray-700">Comment avez-vous trouvé ce objet?</label>
                   <div class="row-span-6 sm:row-span-6 ">
-                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    <select id="howDidYouFindThisObject" name="howDidYouFindThisObject" formControlName="howDidYouFindThisObject" autocomplete="howDidYouFindThisObject" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                       <option>Comment avez-vous trouvé ce objet?</option>
                       <option>Bon</option>
                     </select>
                   </div>    
             </div>
             <div class="col-span-6 sm:col-span-6">
-                <label for="last-name" class="block text-sm font-medium text-gray-700">Avez-vous une voiture?</label>
+                <label for="doYouHaveACar" class="block text-sm font-medium text-gray-700">Avez-vous une voiture?</label>
                 <div class="grid grid-rows-6 grid-flow-col gap-2">
                   <div class="row-span-6 sm:row-span-6 ">
-                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    <select id="doYouHaveACar" name="doYouHaveACar" formControlName="doYouHaveACar" autocomplete="doYouHaveACar" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                       <option>Oui</option>
                       <option>Nom</option>
                     </select>
                  </div>    
                   <div class="row-span-6 sm:row-span-6">
-                    <input type="number" name="first-name" id="first-name" placeholder="Combien?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    <input type="number" name="HaveACarHowMuch" formControlName="HaveACarHowMuch" id="HaveACarHowMuch" placeholder="Combien?" autocomplete="HaveACarHowMuch" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                   </div>
                 </div>
             </div>
             
 
             <div class="col-span-6 sm:col-span-6">
-                <label for="last-name" class="block text-sm font-medium text-gray-700">Etes-vous intéressé par une place de parking?</label>
+                <label for="areYouInterestedInAParkingSpace" class="block text-sm font-medium text-gray-700">Etes-vous intéressé par une place de parking?</label>
                 <div class="grid grid-rows-6 grid-flow-col gap-2">
                   <div class="row-span-6 sm:row-span-6 ">
-                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                    <select id="areYouInterestedInAParkingSpace" name="areYouInterestedInAParkingSpace" formControlName="areYouInterestedInAParkingSpace" autocomplete="areYouInterestedInAParkingSpace" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                       <option>Oui</option>
                       <option>Non</option>
                     </select>
                  </div>    
                   <div class="row-span-6 sm:row-span-6">
-                    <input type="number" name="first-name" id="first-name" placeholder="Combien?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    <input type="number" name="InterestedInAParkingSpaceHowMuch" formControlName="InterestedInAParkingSpaceHowMuch" id="InterestedInAParkingSpaceHowMuch" placeholder="Combien?" autocomplete="InterestedInAParkingSpaceHowMuch" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                   </div>
                 </div>
             </div>
             <div class="col-span-6 sm:col-span-6">
-                <label for="last-name" class="block text-sm font-medium text-gray-700">Réferences</label>
-                <input type="text" placeholder="Réferences" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <label for="refrences" class="block text-sm font-medium text-gray-700">Réferences</label>
+                <input type="text" placeholder="Réferences" name="refrences" formControlName="refrences" id="refrences" autocomplete="refrences" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
               </div> 
                <div class="col-span-6 sm:col-span-6">
-                <label for="last-name" class="block text-sm mb-1 font-medium text-gray-700">Remarques éventuelles</label>
+                <label for="possibleRemarks" class="block text-sm mb-1 font-medium text-gray-700">Remarques éventuelles</label>
                 <div class="mt-1 sm:mt-0 sm:col-span-2">
-                    <textarea id="about" name="about" rows="5" class="max-w-xl shadow-sm block w-full focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border border-gray-300 rounded-md"></textarea>
+                    <textarea id="possibleRemarks" name="possibleRemarks" formControlName="possibleRemarks" rows="5" class="max-w-xl shadow-sm block w-full focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border border-gray-300 rounded-md"></textarea>
                   </div>
               </div>
     
