aws textrat api integration

--- a/src/assets/scss/base/__base-dir.scss
+++ b/src/assets/scss/base/__base-dir.scss
@@ -6,4 +6,5 @@ Files inside this folder can contain global styles used in the project.
 //Import Base files
 @import "reset";
 @import "typography";
+@import "animation";
 /* Additonal Base Stylesheets */
