--- a/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
@@ -1,123 +1,171 @@
-
-  <div class="mt-5 md:mt-0 md:col-span-2 bg-white">
-    <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Activité professionelle</div>
-    <form [formGroup]="activityForm">
-      <div class="grid grid-cols-6 gap-6">
-        <div class="col-span-6 sm:col-span-3">
-            <label for="profession" class="block text-sm font-medium text-gray-700">Profession</label>
-            <input type="text" name="profession" formControlName="profession" placeholder="Votre profession" id="profession" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-          </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="professionDate" class="block text-sm font-medium text-gray-700">Depuis</label>
-          <input type="date" name="professionDate"  formControlName="professionDate" id="professionDate" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-
-        <div class="col-span-6 sm:col-span-3">
-          <label for="employer" class="block text-sm font-medium text-gray-700">Employeur</label>
-          <input type="text" name="employer" formControlName="employer" placeholder="Employeur" id="employer" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-
-        <div class="col-span-6 sm:col-span-3">
-          <label for="workplace" class="block text-sm font-medium text-gray-700">Lieu de travail</label>
-          <input type="text" name="workplace" formControlName="workplace" id="workplace" placeholder="Votre lieu de travail" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-
-        <div class="col-span-6 sm:col-span-3">
-          <label for="contactPerson" class="block text-sm font-medium text-gray-700">Personne de contact</label>
-          <input type="text" name="contactPerson" formControlName="contactPerson" placeholder="Votre personne de contact" id="contactPerson" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="professionalPhoneNumber" class="block text-sm font-medium text-gray-700">Téléphone professionnel</label>
-          <input type="text" placeholder="+41" name="professionalPhoneNumber" formControlName="professionalPhoneNumber" id="professionalPhoneNumber" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="grossMonthlyIncome" class="block text-sm font-medium text-gray-700">Revenu mensuel brut</label>
-          <input type="text" name="grossMonthlyIncome" formControlName="grossMonthlyIncome" placeholder = "0" id="grossMonthlyIncome" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="netMonthlyIncome" class="block text-sm font-medium text-gray-700">Revenu mensuel net</label>
-          <input type="text" name="netMonthlyIncome" formControlName="netMonthlyIncome" placeholder="0" id="netMonthlyIncome" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-      
-        <div class="col-span-6 sm:col-span-3">
-          <label for="lastEmployer" class="block text-sm font-medium text-gray-700">Employeur précédent</label>
-          <input type="text" placeholder="Votre employeur précédent" name="lastEmployer"  formControlName="lastEmployer" id="lastEmployer" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-            <label for="lastEmployerSince" class="block text-sm font-medium text-gray-700">Depuis</label>
-            <input type="date"  name="lastEmployerSince" formControlName="lastEmployerSince" id="lastEmployerSince" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-          </div>
-      
+<div class="mt-5 md:mt-0 md:col-span-2 bg-white">
+  <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Activité professionelle</div>
+  <form [formGroup]="activityForm">
+    <div class="grid grid-cols-6 gap-6">
+      <div class="col-span-6 sm:col-span-3">
+        <label for="profession" class="block text-sm font-medium text-gray-700">Profession</label>
+        <input type="text" name="profession" formControlName="profession" placeholder="Votre profession" id="profession"
+          autocomplete="given-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
       </div>
-      <fieldset class="mt-6">
-        <div>
-          <legend class="text-base font-medium text-gray-900">
-            Fiche de salaire
-          </legend>
+      <div class="col-span-6 sm:col-span-3">
+        <label for="professionDate" class="block text-sm font-medium text-gray-700">Depuis</label>
+        <input type="date" name="professionDate" formControlName="professionDate" id="professionDate"
+          autocomplete="given-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+
+      <div class="col-span-6 sm:col-span-3">
+        <label for="employer" class="block text-sm font-medium text-gray-700">Employeur</label>
+        <input type="text" name="employer" formControlName="employer" placeholder="Employeur" id="employer"
+          autocomplete="family-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+
+      <div class="col-span-6 sm:col-span-3">
+        <label for="workplace" class="block text-sm font-medium text-gray-700">Lieu de travail</label>
+        <input type="text" name="workplace" formControlName="workplace" id="workplace"
+          placeholder="Votre lieu de travail" autocomplete="given-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+
+      <div class="col-span-6 sm:col-span-3">
+        <label for="contactPerson" class="block text-sm font-medium text-gray-700">Personne de contact</label>
+        <input type="text" name="contactPerson" formControlName="contactPerson" placeholder="Votre personne de contact"
+          id="contactPerson" autocomplete="family-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+      <div class="col-span-6 sm:col-span-3">
+        <label for="professionalPhoneNumber" class="block text-sm font-medium text-gray-700">Téléphone
+          professionnel</label>
+        <input type="text" placeholder="+41" name="professionalPhoneNumber" formControlName="professionalPhoneNumber"
+          id="professionalPhoneNumber" autocomplete="family-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+      <div class="col-span-6 sm:col-span-3">
+        <label for="grossMonthlyIncome" class="block text-sm font-medium text-gray-700">Revenu mensuel brut</label>
+        <input type="text" name="grossMonthlyIncome" formControlName="grossMonthlyIncome" placeholder="0"
+          id="grossMonthlyIncome" autocomplete="family-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+        <div *ngIf=" grossMonthlyIncome?.invalid" class="text-left mt-1">
+          <div class="text-red-600" *ngIf="grossMonthlyIncome?.errors?.inv">Montant brut ne correspond pas à celui de
+            votre
+            fiche de salaire {{gross}}</div>
         </div>
-        <div class="mt-4 space-y-4">
-          <div class="flex items-center">
-            <label for="push-everything" class="mr-3 block text-sm font-medium text-gray-500">
-              1er mois de salaire
-            </label>
-            <label for="upload0">
-              <span [ngClass]="currentInput=='+  Ajouter' ? 'text-blue-2' : 'text-gray-700'" > {{currentInput}}</span>
-              <input type="file" id="upload0"  
-              (change)="onFileSelected($event)" style="display:none">
-        </label>          </div>
-          <div class="flex items-center">
-            <label for="push-email" class="mr-3 block text-sm font-medium text-gray-500">
-              2ème mois de salaire
-            </label>
-            <label for="upload1">
-              <span class="text-blue-2"> +  Ajouter</span>
-              <input type="file" id="upload1" style="display:none">
-        </label>         
+      </div>
+      <div class="col-span-6 sm:col-span-3">
+        <label for="netMonthlyIncome" class="block text-sm font-medium text-gray-700">Revenu mensuel net</label>
+        <input type="text" name="netMonthlyIncome" formControlName="netMonthlyIncome" placeholder="0"
+          id="netMonthlyIncome" autocomplete="family-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+          [ngClass]="netMonthlyIncome?.invalid ? 'border-red-500' : 'border-blue-100'">
+
+        <div *ngIf=" netMonthlyIncome?.invalid" class="text-left mt-1">
+          <div class="text-red-600" *ngIf="netMonthlyIncome?.errors?.inv">Montant net ne correspond pas à celui de votre
+            fiche de salaire {{net}}</div>
+        </div>
+      </div>
+
+      <div class="col-span-6 sm:col-span-3">
+        <label for="lastEmployer" class="block text-sm font-medium text-gray-700">Employeur précédent</label>
+        <input type="text" placeholder="Votre employeur précédent" name="lastEmployer" formControlName="lastEmployer"
+          id="lastEmployer" autocomplete="given-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+      <div class="col-span-6 sm:col-span-3">
+        <label for="lastEmployerSince" class="block text-sm font-medium text-gray-700">Depuis</label>
+        <input type="date" name="lastEmployerSince" formControlName="lastEmployerSince" id="lastEmployerSince"
+          autocomplete="given-name"
+          class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+      </div>
+
+    </div>
+    <fieldset class="mt-6">
+      <div>
+        <legend class="text-base font-medium text-gray-900">
+          Fiche de salaire
+        </legend>
+      </div>
+      <div class="mt-4 space-y-4">
+        <div class="flex items-center">
+          <label for="push-everything" class="mr-3 block text-sm font-medium text-gray-500">
+            1er mois de salaire
+          </label>
+          <label for="upload0">
+            <span class="cursor-pointer	" [ngClass]="currentInput=='+  Ajouter' ? 'text-blue-2' : 'text-gray-700'">
+              {{currentInput}}</span>
+            <input type="file" id="upload0" (change)="onFileSelected($event)" style="display:none">
+          </label>
+          <div class="ml-10" *ngIf="payslipProcessLoading$|async">
+            <div class="dot-pulse"></div>
+
           </div>
-          <div class="flex items-center">
-            <label for="push-nothing" class="mr-3 block text-sm font-medium text-gray-500">
+          <div class="ml-10 pulse" *ngIf="payslipProcessLoading$|async">
+            <span class="font-medium text-blue-2 "> traitement</span>
+          </div>
+
+          <div class="ml-10" *ngIf="payslipProcessEndedSuccessfuly$|async">
+            <span class="font-medium text-green-500">Document traité avec succès</span>
+          </div>
+          <div class="ml-10">
+            <span class="font-medium text-red-500">{{payslipProcessErrorMsg$|async}}</span>
+          </div>
+
+        </div>
+        <div class="flex items-center">
+          <label for="push-email" class="mr-3 block text-sm font-medium text-gray-500">
+            2ème mois de salaire
+          </label>
+          <label for="upload1">
+            <span class="text-blue-2"> + Ajouter</span>
+            <input type="file" id="upload1" style="display:none">
+          </label>
+        </div>
+        <div class="flex items-center">
+          <label for="push-nothing" class="mr-3 block text-sm font-medium text-gray-500">
             3ème mois de salaire
-             </label>
-             <label for="upload2">
-              <span class="text-blue-2"> +  Ajouter</span>
-              <input type="file" id="upload2" style="display:none">
-        </label>        
-          </div>
+          </label>
+          <label for="upload2">
+            <span class="text-blue-2"> + Ajouter</span>
+            <input type="file" id="upload2" style="display:none">
+          </label>
         </div>
-      </fieldset>
-      <fieldset class="mt-6">
-        <div>
-          <legend class="text-base font-medium text-gray-900">
-            Fiche de poursuite
-          </legend>
-        </div>
-        <div class="mt-4 space-y-4">
-          <div class="flex items-center">
-            <label for="push-everything" class="mr-3 block text-sm font-medium text-gray-500">
-              Dernier fiche de poursuite
-            </label>
-            <label for="upload3">
-                  <span class="text-blue-2"> +  Ajouter</span>
-                  <input type="file" formControlName="pursuitSheet"  id="pursuitSheet" style="display:none">
-            </label>
-         </div>
-         
-        </div>
-      </fieldset>
-      <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
-        <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
-            <a (click)="returnToAbout()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
-                <img src="../../../../../../assets/images/precedent.svg" />
-            </a>
-          
-          </div>
-           <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
-            
-            <button type="button"   (click)="goToAddress()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
-                Suivant
-              </button>
-          </div>
       </div>
-    </form>
-  </div>
+    </fieldset>
+    <fieldset class="mt-6">
+      <div>
+        <legend class="text-base font-medium text-gray-900">
+          Fiche de poursuite
+        </legend>
+      </div>
+      <div class="mt-4 space-y-4">
+        <div class="flex items-center">
+          <label for="push-everything" class="mr-3 block text-sm font-medium text-gray-500">
+            Dernier fiche de poursuite
+          </label>
+          <label for="upload3">
+            <span class="text-blue-2"> + Ajouter</span>
+            <input type="file" formControlName="pursuitSheet" id="pursuitSheet" style="display:none">
+          </label>
+        </div>
 
+      </div>
+    </fieldset>
+    <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
+      <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
+        <a (click)="returnToAbout()"
+          class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
+          <img src="../../../../../../assets/images/precedent.svg" />
+        </a>
+
+      </div>
+      <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
+
+        <button type="button" (click)="goToAddress()"
+          class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+          Suivant
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
